# TestTask

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
TestTask/: CMakeLists.txt  EventHandlers.h  Main.cpp  TestTask.cpp  TestTask.h
